# Sc2City

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  sc2city.py
data/: Dragon ScalesAIE(76.5, 154.5).json
docker/: Dockerfile  README.md
managers/: __init__.py  calculation_manager.py  memory_manager.py
managers/executors/: unit_request_executor.py
requests/: __init__.py  request.py  unit_request.py
sc2city/: MA_interface.py  README.md  Sc2City.py  __init__.py  bot_memory.py  build_order_manager.py  building_placements.py  cache_first_frame.py  opener_manager.py  placement_debugger.py  placement_extractor.py  placement_solver.py  run.py  scout_manager.py  scv_manager.py  settings.json  strategy_manager.py
sc2city/build_order_manager/: main.py  scv_manager.py  structure_queue.py  unit_queue.py
sc2city/components/: sequence.py
sc2city/data/: Dragon ScalesAIE(171.5, 57.5).json  Dragon ScalesAIE(76.5, 154.5).json  test.json
sc2city/game_objects/: __init__.py  building_placements.py  order.py  scout_time.py  script.py  strategy.py  strategy_objects.py
sc2city/history_analyzer/: __init__.py  main.py
sc2city/interfaces/: MA_interface.py  __init__.py
sc2city/macro_manager/: __init__.py  main.py  structure_queue_manager.py  unit_queue_manager.py
sc2city/managers/: __init__.py  memory_manager.py  mid_game_manager.py  opener_manager.py  scout_manager.py  scv_manager.py  strategy_manager.py  structure_queue_manager.py  unit_queue_manager.py
sc2city/map_analyzer/: main.py  (+3 more)
trainers/: cli_tool.py
(+106 files in other folders)
