[tool.poetry]
name = "sc2city"
version = "0.1.0"
description = ""
authors = ["savelas81 <savelas81@gmail.com>", "luguenin <l-huguenin@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
burnysc2 = "^6.4.0"
aiohttp = "^3.8.6"
scikit-learn = "^1.3.2"
selenium = "^4.16.0"
pyperclip = "^1.8.2"
numpy = "^1.26.2"
loguru = "0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = """
    build_order_extractor,
    burny_build_order,
    config,
    game_objects,
    managers,
    map_editor,
    placement_extractor,
    third_party_code,
    utils
    """
